Add gap setting
When non-zero, this many pixels will be added around each frame
except for the sides touching the edges of the screen.

--- a/ratpoison.1
+++ b/ratpoison.1
@@ -997,6 +997,12 @@ The border color of the focused window.
 .Pp
 Default is
 .Li black .
+.It Cm gap Ar pixels
+Specify the number of pixels surrounding each frame, except for the outer
+edges which border the screen.
+.Pp
+Default is
+.Li 0 .
 .It Cm historysize Ar number
 Specify maximum number of values kept in input history.
 .Pp
