Add ignoreresizehints setting
When enabled, PResizeInc hints will be ignored on windows, forcing
them to be the exact size of their containing frame.

This is useful for terminals which specify a PResizeInc hint to
request that their size be a multiple of the terminal's font size.
While ignoring this hint will cause the terminal to have padding
around the bottom/right sides, it may be better looking than having
the window the "correct" size and having that empty space be in the
frame.

--- a/ratpoison.1
+++ b/ratpoison.1
@@ -1008,6 +1008,14 @@ Specify maximum number of values kept in input history.
 .Pp
 Default is
 .Li 20 .
+.It Cm ignoreresizehints Li 0 | 1
+When set to
+.Pq Li 1 ,
+window resize hints will be ignored, forcing windows to be the exact
+sizes of their containing frame.
+.Pp
+Default is
+.Li 0 .
 .It Cm inputwidth Ar pixels
 Determine the width of the input window.
 .Pp
