Change the default framefmt to include window width and height

--- a/ratpoison.1
+++ b/ratpoison.1
@@ -970,6 +970,12 @@ Make
 .Nm
 use font
 .Ar font .
+.It Cm framefmt Ar format
+Choose the default format for the window label shown when selecting
+a different frame.
+.Pp
+Default is
+.Li Frame %f (%Wx%H) .
 .It Cm framemsgwait Ar seconds
 The duration the
 .Ql Current frame
