--- a/AUTHORS
+++ b/AUTHORS
@@ -1,22 +1,10 @@
-Shawn Betts (sabetts at vcn bc ca)
+sdorfehs is maintained by joshua stein <jcs@jcs.org>.
 
-Shawn is the original author and former maintainer for
-ratpoison. Sickened by the rat and the trend in window managers, he
-sat down one evening and pulled an all-nighter writing the first
-version of ratpoison.
+It is derived from ratpoison which was originally authored by
+Shawn Betts <sabetts at vcn bc ca> with contributions by:
 
-Ryan Yeske (rcyeske at vcn bc ca)
-
-Ryan doesn't commit much code these days, but that's not because he
-doesn't want to, its just that he forgot his cvs ssh password.
-Meanwhile, the patches are piling up.
-
-Jeremie Courreges-Anglas (jca+ratpoison at wxcvbn dot org)
-
-Current maintainer.
-
-Other Contributors:
-
+Ryan Yeske <rcyeske at vcn bc ca>
+Jeremie Courreges-Anglas <jca+ratpoison at wxcvbn dot org>
 Ben Leslie <benno at sesgroup dot net>
 Chr. v. Stuckrad <stucki at math dot fu-berlin dot de>
 Dan Aloni <da-x at gmx dot net>
