sdorfehs.1: mention fifo path, add me as an author

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -1197,11 +1197,18 @@ Default is
 .Bl -tag -compact
 .It Pa ~/.config/sdorfehs/config
 Configuration file read at startup time, if present.
+.Pp
+.It Pa ~/.config/sdorfehs/bar
+FIFO/named pipe which accepts input to show on the sticky bar when
+.Ic barsticky
+is enabled.
 .El
 .Sh EXIT STATUS
 .Ex -std
 .Sh AUTHORS
 .An -nosplit
 .Nm
-is derived from ratpoison which was originally written by
+is maintained by
+.An joshua stein Aq Mt jcs@jcs.org
+and is derived from ratpoison which was originally written by
 .An Shawn Betts Aq Mt sabetts@gmail.com .
