{move,maximize}_window: Make defaults.only_border apply to gaps
If there is only one frame on the screen, make it take up the entire
screen (less the bar space) regardless of borders or gaps.

--- a/sdorfehs.1
+++ b/sdorfehs.1
@@ -1055,7 +1055,7 @@ is zero, wait infinitely.
 .Pp
 Default is 3.
 .It Cm onlyborder Li 0 | 1
-Determine whether to show borders
+Determine whether to show borders and gaps
 .Pq Li 1
 or not
 .Pq Li 0
